--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-page-progress",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "React library that tracks a users progress through a page as they scroll",
   "main": "build/index.js",
   "scripts": {
@@ -125,5 +125,13 @@
     "presets": [
       "react-app"
     ]
-  }
+  },
+  "keywords": [
+    "react-page-progress",
+    "page-progress",
+    "react-progress-page",
+    "react",
+    "progress-page",
+    "react-library"
+  ]
 }
