--- a/package.json
+++ b/package.json
@@ -128,10 +128,6 @@
   },
   "keywords": [
     "react-page-progress",
-    "page-progress",
-    "react-progress-page",
-    "react",
-    "progress-page",
-    "react-library"
+    "react"
   ]
 }
