--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nomangul/react-page-progress.git"
+    "url": "git+https://github.com/NomanGul/react-page-progress.git"
   },
   "author": "Noman Gul <nomangul2001@gmail.com>",
   "bugs": {
-    "url": "https://github.com/nomangul/react-page-progress/issues"
+    "url": "https://github.com/NomanGul/react-page-progress/issues"
   },
-  "homepage": "https://nomangul.github.io/react-page-progress",
+  "homepage": "https://NomanGul.github.io/react-page-progress",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
@@ -26,7 +26,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
-    "babel-loader": "8.0.5",
+    "babel-loader": "8.0.4",
     "babel-plugin-named-asset-import": "^0.3.0",
     "babel-preset-react-app": "^7.0.0",
     "bfj": "6.1.1",
@@ -57,10 +57,10 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.7.0-alpha.2",
+    "react": "^16.6.3",
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.0",
-    "react-dom": "^16.7.0-alpha.2",
+    "react-dom": "^16.6.3",
     "resolve": "1.9.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
