--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: node_js
 node_js:
- - "node"
+  - "stable"
+cache:
+  directories:
+    - node_modules
 script:
- - npm run test
+  - npm run test
